# Backgammon

./: .gitignore  CMakeLists.txt  README.md
impl/: CMakeLists.txt
impl/assets/menu/: menu_media.json
impl/assets/play/: play_media.json
impl/assets/settings/: settings_media.json
impl/include/: CustomException.hpp  Die.hpp  Feature.hpp  Field.hpp  Figure.hpp  Game.hpp  GameObject.hpp  Geometry.hpp  Mainloop.hpp  Menu.hpp  Renderer.hpp  Scene.hpp  Settings.hpp  Texture.hpp  Transform.hpp  Utility.hpp  Widget.hpp  Window.hpp
impl/src/:  Field.cpp  Die.cpp  Feature.cpp  Field.cpp  Figure.cpp  Game.cpp  Mainloop.cpp  Menu.cpp  Settings.cpp  Texture.cpp  Utility.cpp  Widget.cpp  main.cpp  main_menu_media.json
setup/: CMakeLists.txt
setup/include/: Mainloop.hpp
setup/src/: Mainloop.cpp  main.cpp
